--- a/Aula12/index.html
+++ b/Aula12/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Aula 12 - Componentes</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 <body>
-    
+<div id="app">
+    <button @click="alterarComponentes">Alterar componentes</button>
+
+    <transition name="fade" mode="out-in">
+        <compnent :is="componenteAtual"></compnent>
+    </transition>
+</div>
 </body>
 </html>
